@@ -17,6 +17,8 @@ changes in sbcl-1.0.5 relative to sbcl-1.0.4:
   * bug fix: some GC deadlocks caused by asynchronous interrupts have
     been fixed by inhibiting interrupts for when GC is disbled.
   * bug fix: GETHASH, PUTHASH, CLRHASH and REMHASH are now interrupt safe.
+  * bug fix: binding *BREAK-ON-SIGNALS* to a value that is not a type
+    specifier no longer causes infinite recursion.
   * improvement: the x86-64/darwin port now passes all tests and
     should be considered non-experimental.
 
